--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,9 @@
   display: flex;
   flex-direction: column;
 }
+.none{
+  display:none;
+}
 * {
   margin: 0;
   padding: 0;
@@ -121,6 +124,71 @@ nav{
     background-color: black;
     outline-offset: 2px;
   }
+}
+.modal{
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: black;
+  display: flex;
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity .6s
+}
+.modal_container{
+  margin: auto;
+  width: 90%;
+  max-width: 600px;
+  max-height: 90%;
+  border-radius: 6px;
+  padding: 3em 2.5em;
+  // display: grid;
+  // place-items: center;
+  grid-auto-columns: 100%;
+  gap: 1em;
+  background-color: #fff;
+  @extend .y-transition
+}
+.modal_img{
+  width: 90%;
+  max-width: 300px;
+}
+.modal_close{
+  text-decoration: none;
+  color: #fff;
+  background-color: #f26250;
+  padding: 1em 3em;
+  border: 1px solid;
+  border-radius: 6px;
+  display: inline-block;
+  font-weight: 300;
+  transition: background-color .3s;
+}
+.btn-2{
+  text-decoration: none;
+  color: #fff;
+  background-color: #f26250;
+  padding: 1em 3em;
+  border: 1px solid;
+  border-radius: 6px;
+  display: inline-block;
+  font-weight: 300;
+  transition: background-color .3s;
+}
+.btn-2:hover{
+  color: #f26250;
+  background-color: #fff;
+}
+.modal_close:hover{
+  color: #f26250;
+  background-color: #fff;
+}
+.modal_show{
+  opacity: 1;
+  pointer-events: unset;
+  transition: opacity .6s
 }
 .title-cover {
   @extend .centerflex;
